@@ -1,0 +1,8 @@
+Title: raritan_pdu_inlet: now delivers performance data
+Level: 1
+Component: checks
+Version: 1.2.5i4
+Date: 1402586189
+Class: feature
+
+
